--- a/app/src/main/res/drawable/edit_text_background.xml
+++ b/app/src/main/res/drawable/edit_text_background.xml
@@ -3,14 +3,14 @@
 
     <item android:state_focused="true">
         <shape>
-            <stroke android:color="@color/secondColor" android:width="1dp"/>
+            <stroke android:color="@color/thirdColor" android:width="2dp"/>
             <solid android:color="@color/white"/>
         </shape>
     </item>
 
     <item>
         <shape>
-            <solid android:color="@color/inputBackground"/>
+            <solid android:color="@color/thirdColor"/>
         </shape>
     </item>
 
