--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,6 @@
     <LinearLayout
         android:id="@+id/login_form_container"
         app:layout_constraintTop_toBottomOf="@id/login_img_container"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
@@ -40,7 +39,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <EditText
-                android:hint="Usuario"
+                android:id="@+id/input_user_name"
+                android:hint="Tu nombre"
                 style="@style/EditText"
                 android:background="@drawable/edit_text_background"
                 android:inputType="text"
@@ -48,20 +48,8 @@
                 android:layout_height="wrap_content"/>
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_margin="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <EditText
-                android:hint="Contraseña"
-                style="@style/EditText"
-                android:background="@drawable/edit_text_background"
-                android:inputType="textPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_login"
             android:text="INGRESAR"
             style="@style/ButtonStyle"
             android:layout_marginTop="10dp"
@@ -69,15 +57,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/tv_register"
-            android:gravity="end"
-            android:layout_marginTop="10dp"
-            android:text="@string/register"
-            style="@style/LinkText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
     </LinearLayout>
+
+
+    <TextView
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/login_form_container"
+        android:layout_marginEnd="5dp"
+        android:layout_marginStart="5dp"
+        android:padding="5dp"
+        android:id="@+id/tv_register"
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        android:text="@string/register"
+        style="@style/LinkText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
