--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,4 +36,10 @@
         <item name="android:capitalize"> characters</item>
         <item name="android:justificationMode"> inter_word</item>
     </style>
+
+    <style name="HighLightText">
+        <item name="android:textColor"> @color/white</item>
+        <item name="android:textSize"> 15sp</item>
+        <item name="android:textStyle"> italic</item>
+    </style>
 </resources>
