--- a/app/src/main/res/drawable/background_options.xml
+++ b/app/src/main/res/drawable/background_options.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_focused="true">
+    <item android:state_pressed="true">
         <shape>
-            <stroke android:color="@color/thirdColor" android:width="2dp"/>
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/secondColor"/>
         </shape>
     </item>
 
     <item>
         <shape>
             <solid android:color="@color/white"/>
+            <padding android:top="2dp"/>
+            <padding android:bottom="2dp"/>
         </shape>
     </item>
-
 
 </selector>
