--- a/app/src/main/res/drawable/image_button_background.xml
+++ b/app/src/main/res/drawable/image_button_background.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:state_focused="true">
+    <item android:state_pressed="true">
         <shape>
-            <stroke android:color="@color/thirdColor" android:width="2dp"/>
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/secondColor"/>
+            <corners android:radius="15dp"/>
         </shape>
     </item>
 
     <item>
         <shape>
-            <solid android:color="@color/white"/>
+
         </shape>
     </item>
-
-
 </selector>
