--- a/app/src/main/res/layout/fragment_criterions_list.xml
+++ b/app/src/main/res/layout/fragment_criterions_list.xml
@@ -3,12 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:name="com.carlos.cc.gesact.fragments.GroupsFragment"
+    android:name="com.carlos.cc.gesact.fragments.CriterionsFragment"
     android:orientation="vertical"
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.GroupsFragment">
+    tools:context=".fragments.CriterionsFragment">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content">
 
             <EditText
-                android:id="@+id/txt_search_groups"
+                android:id="@+id/txt_search_criterions"
                 style="@style/EditText"
                 android:hint="@string/search"
                 android:inputType="text"
@@ -38,7 +38,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <ImageButton
-            android:id="@+id/btn_search_group"
+            android:id="@+id/btn_search_criterion"
             android:background="@drawable/image_button_background"
             android:src="@drawable/ic_search"
             android:layout_width="wrap_content"
@@ -55,12 +55,53 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <LinearLayout
+        android:background="@drawable/spinner_background"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="5dp"
+        android:padding="2dp"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:text="@string/group"
+            style="@style/LinkText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <Spinner
+            android:id="@+id/spinner_groups"
+            android:spinnerMode="dropdown"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+    <LinearLayout
+        android:background="@drawable/spinner_background"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="5dp"
+        android:padding="2dp"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:text="@string/subject"
+            style="@style/LinkText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <Spinner
+            android:id="@+id/spinner_subjects"
+            android:spinnerMode="dropdown"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+
     <RelativeLayout
         android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
-            android:id="@+id/btn_add_group"
+            android:id="@+id/btn_add_criterions"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_marginBottom="25dp"
@@ -72,17 +113,14 @@
             android:layout_height="wrap_content"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list_groups"
-            android:name="com.carlos.cc.gesact.fragments.GroupsFragment"
+            android:id="@+id/list_criterions"
+            android:name="com.carlos.cc.gesact.fragments.CriterionFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/element_list_margin"
             android:layout_marginRight="@dimen/element_list_margin"
             app:layoutManager="LinearLayoutManager"
-            tools:context=".fragments.GroupsFragment"
-            tools:listitem="@layout/fragment_groups"/>
+            tools:context=".fragments.CriterionsFragment"
+            tools:listitem="@layout/fragment_criterions"/>
     </RelativeLayout>
-
-
-
 </LinearLayout>
