--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -1,20 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/element_list_background"
+    android:layout_margin="2dp"
+    android:gravity="center_vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/item_number"
-        android:layout_width="wrap_content"
+        android:id="@+id/element_group_name"
+        android:layout_width="0dp"
+        android:layout_weight="30"
         android:layout_height="wrap_content"
+        android:drawableStart="@drawable/ic_groups"
+        android:drawableTint="@color/black"
+        android:drawablePadding="5dp"
+        android:gravity="center_vertical"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:textAppearance="@style/TextHeader.Simple" />
 
     <TextView
-        android:id="@+id/content"
-        android:layout_width="wrap_content"
+        android:id="@+id/element_group_grade_name"
+        android:layout_width="0dp"
+        android:layout_weight="30"
         android:layout_height="wrap_content"
+        android:drawablePadding="5dp"
+        android:gravity="center"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:textAppearance="@style/TextHeader.Simple" />
+
+    <TextView
+        android:id="@+id/element_group_status"
+        android:layout_width="0dp"
+        android:layout_weight="30"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|center_vertical"
+        android:gravity="end"
+        android:layout_margin="@dimen/text_margin"
+        android:textAppearance="@style/TextHeader.Simple" />
 </LinearLayout>
