--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#c62828</color>
+    <color name="gray">#D4D6D6</color>
 
     <color name="inputBackground">#A171B6F8</color>
 </resources>
