--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,10 +2,12 @@
 <resources>
 
     <style name="EditText">
-        <item name="background"> @drawable/edit_text_background</item>
+<!--        <item name="background"> @drawable/edit_text_background</item>-->
         <item name="android:textColor"> @color/black</item>
-        <item name="hintTextColor"> @color/white</item>
+        <item name="android:textColorHint"> @color/mainColor</item>
         <item name="android:singleLine"> true</item>
+        <item name="android:backgroundTint"> @color/white </item>
+        <item name="android:inputType"> textCapSentences</item>
     </style>
 
     <style name="LinkText">
@@ -37,9 +39,29 @@
         <item name="android:justificationMode"> inter_word</item>
     </style>
 
+    <style name="TextHeader.Simple">
+        <item name="android:textSize"> 16sp</item>
+        <item name="singleLine">true</item>
+    </style>
+
     <style name="HighLightText">
         <item name="android:textColor"> @color/white</item>
         <item name="android:textSize"> 15sp</item>
         <item name="android:textStyle"> italic</item>
+    </style>
+
+    <style name="CustomTheme.Dialog" parent="android:Theme.Holo.Light.Dialog">
+        <item name="android:editTextStyle">@style/EditText</item>
+        <item name="android:windowBackground">@android:color/white</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowMinWidthMajor">@android:dimen/dialog_min_width_major</item>
+        <item name="android:windowMinWidthMinor">@android:dimen/dialog_min_width_minor</item>
+    </style>
+    <style name="options">
+        <item name="android:textColor"> @color/black</item>
+        <item name="android:layout_margin"> 2dp</item>
+        <item name="android:padding"> 2dp</item>
+        <item name="android:textSize"> 20sp </item>
+        <item name="android:singleLine"> true</item>
     </style>
 </resources>
